--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
-    "@fortawesome/fontawesome-free": "^5.13.1",
-    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
-    "font-awesome": "^4.7.0",
+    "ngx-spinner": "^7.0.0",
+    "ngx-toastr": "^10.2.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
